image path fixed

--- a/index.css
+++ b/index.css
@@ -25,14 +25,14 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background: rgba(255, 255, 255, 0.25);
     z-index: 10;
-	backdrop-filter: blur(25px);
+    backdrop-filter: blur(25px);
     border: 1px solid rgba(255,255,255,0.5);
 }
 
 .area {
     width: 300px;
     margin: 10px;
-	text-align: center;
+    text-align: center;
 }
 
 .area h1 {
@@ -53,9 +53,9 @@ body {
 }
 
 .icon {
-	display: flex;
+    display: flex;
     font-size: 30px;
-	justify-content: center;
+    justify-content: center;
     font-size: 5px;
     margin-bottom: 10px;
 }
@@ -67,7 +67,7 @@ body {
     width:40px;
 }
 .form label{
-	display: inline-flex;
+    display: inline-flex;
     letter-spacing: 1px;
     font-size: 12px;
     font-family: Marvel;
@@ -83,7 +83,7 @@ body {
     content: '';
     width: 400px;
     height: 100%;
-    background-image: url(../asset/images/weirdo.jpg);
+    background-image: url('asset/images/weirdo.jpg');
     position: absolute;
     background-repeat: no-repeat;
     background-size: cover;
