--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 130vh;
     background: linear-gradient(to right, #96c93d, #00b09b);
 }
 .container {
@@ -158,4 +158,63 @@ button:active {
 
 .bold {
     font-weight: bolder;
+}
+
+
+@media only screen and (max-width: 480px) {
+    .container {
+        width: 300px;
+        margin: 0;
+        padding: 10px;
+        position: absolute;
+        top: 15%;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+    
+    .banner {
+        margin: 0 28px;
+        border-radius: 0;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        top: 350px;
+        position: absolute;
+        width: 300px;
+        margin-bottom: 12px;
+    }
+    .banner::after {
+        width: 300px;
+        height: 100%;
+        position: absolute;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-bottom-left-radius: 20px;
+        border-top-right-radius: 0;
+        mix-blend-mode: color-burn;
+        background-size: contain 100%;
+    }
+    
+    .area {
+        width: 100%;
+        border: none;
+    }
+
+    .area h1 {
+        font-size: 22px;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    
+    input,
+    button {
+        width: 100%;
+    }
+    
+    button {
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+    
 }
