--- a/index.css
+++ b/index.css
@@ -160,6 +160,22 @@ button:active {
     font-weight: bolder;
 }
 
+.spinner {
+    display: inline-block;
+    border: 4px solid #1b25245d; 
+    border-top: 4px solid #3d3c3c; 
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 1s linear infinite;
+    margin-left: 6px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 @media only screen and (max-width: 480px) {
     .container {
