--- a/index.css
+++ b/index.css
@@ -74,6 +74,7 @@ body {
 }
 
 .banner {
+    margin-left: 40px;
     width: 380px;
     height: 100%;
 }
@@ -97,9 +98,10 @@ body {
 
 
 .banner div {
+    width: 100%;
     margin: auto;
     color: #000;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     position: relative;
     z-index: 1;
 }
@@ -158,6 +160,31 @@ button:active {
 
 .bold {
     font-weight: bolder;
+}
+
+.anime {
+    font-size: 14px;
+    font-weight: 500;
+    width: 100%;
+    text-transform: none;
+    animation-fill-mode: forwards;
+    animation-duration: 1.7s;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: linear-gradient(to right, #30ffe75d 8%, #727171 18%, #eeeeee 33%);
+    background-size: 800px 104px;
+    height: auto;
+    position: relative;
+}
+
+@keyframes placeHolderShimmer {
+    0% {
+      background-position: -800px 0
+    }
+    100% {
+      background-position: 800px 0
+    }
 }
 
 .spinner {
